syntax = "proto3";
option go_package = "github.com/farhadmirr/simple-gRPC-handler/proto";

package protoExample;

service MyServer {
    // Sends a greeting
    rpc SayHello (HelloBody) returns (HelloReply) {}
}
message HelloBody{
    string name = 1 ;
    string lastname = 2 ;
}
message HelloReply{
    string respond = 1 ;
}
